--- a/_scss/custom/_modal.scss
+++ b/_scss/custom/_modal.scss
@@ -1,4 +1,10 @@
-// MODAL
+/* |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+  
+   MODAL 
+   
+|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| */
+
+
 
 
 .reveal {
