--- a/_scss/custom/_type.scss
+++ b/_scss/custom/_type.scss
@@ -1,6 +1,21 @@
-// typography 
+/* |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+  
+   TYPOGRAPHY 
+   
+|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| */
 
 
+h1 {
+    font-size: 7vw;
+    
+	@include breakpoint(xlarge) {
+		font-size: 5rem;
+	}
+}
+
+h4 {
+	color: $warm-gray-2;
+}
 
 p {
 	
