--- a/_scss/custom/_blocks.scss
+++ b/_scss/custom/_blocks.scss
@@ -1,110 +1,40 @@
-body {
-	animation: fadein 2s;
-}
+/* |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+  
+   BLOCKS 
+   
+|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| */
 
-@keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
 
-// promo block 
 
-.story-promo-block {
-	padding: 4vh 12vh;
-	text-align: center;
-}
+// std block
 
-.story-promo-block a {
-	border: 1px solid #000;
-	display: inline-block;
-	margin-top: 2rem;
-	padding: 0.75rem;
-	text-align: center;
-	color: #000;
-}
-
-.story-promo-block a:hover {
-	background-color: #000;
-	color: #fff;
+.block {
+	position: relative;
 }
 
 
-.skewed-block {
+
+// skew div wrap 
+
+.block-skew-wrap {
 	padding: 0;
 	z-index: 1000;
 }
 
-.inner-skewed-block {
-	position: relative;
-	padding: 0 5vw 9vw 5vw;
-	text-align: center;
+
+
+// block pad options
+
+.block-pad-sm {
+	padding: 4vw 3vw;
 }
 
-
-.standard-block {
-	position: relative;
-	padding: 9vw 5vw;
-	text-align: center;
-}
-
-.standard-block a {
-	border: 1px solid #000;
-	display: inline-block;
-	margin-top: 2rem;
-	padding: 0.75rem;
-	text-align: center;
-	color: #000;
-}
-
-.standard-block a:hover {
-	background-color: #000;
-	color: #fff;
-}
-
-.standard-block.dark {
-	background-color: #ccc;
-}
-
-.standard-block.light {
-	background-color: #eee;
+.block-pad-md {
+	padding: 7vw 3vw;
 }
 
 
 
 
-figure {
-	margin: 0;
-	position: relative;
-    display: table;
-    width: 100%;
-}
 
-figcaption {
-	position: absolute;
-    display: table-cell;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    display: block;
-    border: 6px solid lime;
-}
 
-figcaption span {
-    position: relative;
-    display: inline-block;
-    z-index: 2; 
-    top: 50%;
-	transform: translateY(-50%); 
-}
-
-figcaption span h1,
-figcaption span h2,
-figcaption span h3 {
-	color: #fff;
-}
