--- a/_scss/custom/_images.scss
+++ b/_scss/custom/_images.scss
@@ -8,9 +8,10 @@
 // vertical center text
 
 figure {
-	margin: 0;
 	position: relative;
+	margin: 0;
 	display: table;
+	table-layout: fixed;
 	width: 100%;
 }
 
