--- a/_scss/custom/_blocks.scss
+++ b/_scss/custom/_blocks.scss
@@ -6,13 +6,47 @@
 
 
 
-// std block
+// basic block
 
 .block {
 	position: relative;
 }
 
 
+// page header
+
+.block-page-head {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
+	box-sizing: border-box;
+    margin: 0;
+	width: 100%;
+	height: 65vh;
+	min-height: 0%;
+	z-index: 0;
+    background-color: $dark-gray;
+	text-decoration: none;
+}
+
+.text-containerx {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 55vh;
+    margin: 0;
+	width: 100%;
+	z-index: 100;
+	color: #fff;
+}
+
+.valignx {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);	
+}
 
 // skew div wrap 
 
