--- a/_scss/app.scss
+++ b/_scss/app.scss
@@ -48,6 +48,7 @@
 @import 'custom/variables',
 		'custom/type',
 		'custom/nav',
+		'custom/titlebar',
 		'custom/page-home',
 		'custom/blocks',
 		'custom/skew',
