--- a/_scss/custom/_blocks.scss
+++ b/_scss/custom/_blocks.scss
@@ -27,7 +27,6 @@
 	height: 65vh;
 	min-height: 0%;
 	z-index: 0;
-    background-color: $dark-gray;
 	text-decoration: none;
 }
 
@@ -47,6 +46,26 @@
     top: 50%;
     transform: translateY(-50%);	
 }
+
+
+// page header bkgrd colors
+
+.dark-gray {
+	background-color: $dark-gray;
+}
+
+.warm-gray-1 {
+	background-color: $warm-gray-1;
+}
+
+.warm-gray-2 {
+	background-color: $warm-gray-2;
+}
+
+.warm-gray-3 {
+	background-color: $warm-gray-3;
+}
+
 
 // skew div wrap 
 
