--- a/_scss/custom/_skew.scss
+++ b/_scss/custom/_skew.scss
@@ -17,7 +17,7 @@
   left: 0;
   top: -80px;
   width: 100%;
-  height: 180px;
+  height: 120px;
   background: #fff;
   transform: skewY(-3.5deg);
   backface-visibility: hidden;
@@ -36,6 +36,13 @@
 		padding: 0 14vw 6vw 14vw;
 	}
 	
-	
+}
+
+.panel-skew-top-inner h4 {
+	border-bottom: 1px solid $warm-gray-2;
+	letter-spacing: 0.1rem;
+	text-transform: uppercase;
+	padding-bottom: 0.5rem;
+	display: inline-block;
 }
 
