--- a/_scss/app.scss
+++ b/_scss/app.scss
@@ -48,7 +48,7 @@
 @import 'custom/variables',
 		'custom/type',
 		'custom/nav',
-		'custom/titlebar',
+		'custom/close-bar',
 		'custom/page-home',
 		'custom/blocks',
 		'custom/skew',
