Set up bio pg, tweak vertical center flex

--- a/_scss/app.scss
+++ b/_scss/app.scss
@@ -49,7 +49,7 @@
 		'custom/type',
 		'custom/nav',
 		'custom/close-bar',
-		'custom/page-home',
+		'custom/pages',
 		'custom/blocks',
 		'custom/skew',
 		'custom/images',
