--- a/_scss/custom/_blocks.scss
+++ b/_scss/custom/_blocks.scss
@@ -85,6 +85,18 @@
 
 }
 
+.vertical-center-row {
+	
+	@include breakpoint(medium) {
+	    display: flex;
+	    flex-direction: row;
+	    align-items: center;
+	    justify-content: center;
+	}
+}
+
+
+
 
 // skew div wrap 
 
@@ -128,7 +140,7 @@
 // block pad options
 
 .block-pad-sm {
-	padding: 4vw 3vw;
+	padding: 4vw 0;
 }
 
 .block-pad-md {
@@ -136,6 +148,11 @@
 }
 
 
+
+
+.block-team-bio-header {
+	background-color: $steel-blue;
+}
 
 
 
