--- a/_scss/custom/_close-bar.scss
+++ b/_scss/custom/_close-bar.scss
@@ -8,6 +8,7 @@
 
 .close-bar {
 	background-color: $dark-gray;
+/*
 	display: flex;
 	flex-direction: row;
 	align-items: center;
@@ -16,6 +17,24 @@
 	text-transform: uppercase;
 	letter-spacing: 0.05em;
 	height: 3rem;
+
+	@include breakpoint(medium) {
+		height: 7rem;
+	}
+*/
+}
+
+.close-bar .row {
+	background-color: $dark-gray;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	color: #fff;
+	text-transform: uppercase;
+	letter-spacing: 0.05em;
+	height: 3rem;
+	max-width: 75rem;
 
 	@include breakpoint(medium) {
 		height: 7rem;
