--- a/_scss/custom/_pages.scss
+++ b/_scss/custom/_pages.scss
@@ -181,6 +181,7 @@
 .region-team-headshots a {
     background-color: $dark-gray;
     display: inline-block;
+    width: 100%;
 }
 
 .region-team-headshots a img {
